package br.unitins.tp1.dto;

public record ItemPedidoDTO(
    Long idProduto,
    Double preco,
    Integer qtd
    // desconto
    ) {
    
}