@startuml

class Capacete {
    nome: String
    preco: Double
}


class Fabricante{
    nome: String
    cnpj: String 
}

class Marca {
    nome: String  
}

enum Categoria {
    FECHADO: int
    ABERTO: int
    ARTICULADO: int  
}

class Modelo {
    nome: String
}

enum Cor{
    PRETO: int
    VERMELHO: int
    AZUl: int
    BRANCO: int
    VERDE: int
    AMARELO: int
    ROSA: int
    ROXO: int
    LARANJA: int
    MARROM: int
    CINZA: int 
}

enum CorViseira{
    FUME: int
    CRISTAL: int
    IRIDIUM: int
    CAMALEAO: int
    CROMADA: int
    DOURADA: int
 }

enum Tamanho{
    56: int
    58: int
    60: int
    62: int   
}


class Viseira {
    marca: String
    cor: String
    tipo: String 
}

enum Jugular {
    ENGATERAPIDO: int
    DUPLOD: int
}


class Lote{
    codigo: String 
    quantidade: Integer
    dataFabricacao: LocalDate
}

abstract class Pessoa {
    nome: String
}

class PessoaFisica{
    cpf: String
    dataNascimento: Date
}

class PessoaJuridica{
    cnpj: String
}

class Usuario {
    username: String
    senha: String
    email: String
    dataCadastro: LocalDate
    perfil: Perfil
}


class Funcionario{
    salario: BigDecimal
    dataContratacao: LocalDate
    cargo: String
}


class Telefone {
    codigoArea: String
    numero: String
}

class Endereco {
    logradouro: String
    bairro: String
    numero: String
    complemento: String
    cep: String
}


class Cidade {
    nome: String
}

class Estado {
    nome: String
    sigla: String
}

class Pedido {
    data: LocalDateTime
    valorTotal: Double
    enderecoEntrega: Endereco
}

class ItemPedido {
    quantidade: Integer
    preco: Double
}

class StatusPedido {
    dataAtualizacao: LocalDateTime
}

enum SituacaoPedido {
    AGUARDANDOPAGAMENTO: int
    PAGAMENTCONFIRMADO: int
    CANCELADO: int
    ENVIADO: int
    ENTREGUE: int
    DEVOLVIDO: int
}


abstract class Pagamento {
    valor: Double
    dataPagamento: LocalDateTime
    dataVencimento: LocalDateTime
    tipoPagamento: TipoPagamento
}

enum TipoPagamento{
    PIX: int
    BOLETO : int
    CARTAO : int
}


class Pix {
    chave: String
}

class Boleto {
    codigoBarras: String
}

class Cartao {
    nomeTitular: String
    numero: String
    codigoSeguranca: String
    validade: LocalDate
}

class CartaoPagamento {
    tipoCartaoPagamento: TipoCartaoPagamento
}

enum Perfil {
    USUARIO: int
    FUNCIONARIO: int
    CLIENTE: int
    ADMINISTRADOR: int
    FABRICANTE: int
}

enum TipoCartaoPagamento {
    DEBITO: int
    CREDITO: int
}


'relacionamento'

Capacete "*" --> "1" Categoria
Capacete "*" --> "1" Modelo
Capacete "*" --> "1" Jugular
Capacete "*" --> "1" Viseira
Capacete "*" --> "1" Cor
Capacete "*" --> "1" Tamanho


Modelo "*" --> "1" Marca
Marca "*" --> "1" Fabricante

ItemPedido "*" --> "1" Capacete
Lote "1" --> "*" Capacete
Capacete "*" --> "1" Lote

Pedido "*" --> "1" Usuario
Pedido "1" --> "*" ItemPedido
Pedido "1" --> "*" StatusPedido
Pedido "1" --> "1" Pagamento
StatusPedido "*" --> "1" SituacaoPedido


Pix --|> Pagamento
Boleto --|> Pagamento
CartaoPagamento --|> Pagamento
CartaoPagamento "*" --> "1" Cartao
CartaoPagamento "*" --> "1" TipoCartaoPagamento
Usuario "1" --> "*" Cartao : lista cartões

Pessoa "1" --> "*" Telefone
Pessoa "1" --> "*" Endereco
PessoaFisica --|> Pessoa
PessoaJuridica --|> Pessoa


Fabricante "1" --> "1" PessoaJuridica


Funcionario --|> Usuario
Usuario --|> Pessoa
Cidade "*" --> "1" Estado
Endereco "*" --> "1" Cidade
Viseira "*" --> "1" CorViseira
Viseira "*" --> "1" Marca

@enduml